name:                   crypto-enigma
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:         +-+------- breaking API changes
--                      | | +----- non-breaking API additions
--                      | | | +--- code changes with no API change
version:                0.0.1.4
synopsis:               An Enigma machine simulator with display.
description:            The crypto-enigma package is an Enigma machine simulator
                        with rich display and machine state details.
                        .
                        For basic functionality, including some introspection of machine state
                        and the mappings performed, simply
                        .
                        > > import Crypto.Enigma
                        .
                        For richer display functionality additionally
                        .
                        > > import Crypto.Enigma.Display
homepage:               https://github.com/orome/crypto-enigma
bug-reports:	        https://github.com/orome/crypto-enigma/issues
license:                BSD3
license-file:           LICENSE
author:                 Roy Levien
maintainer:             royl@aldaron.com
-- copyright:           
category:               Cryptography, Education
build-type:             Simple
extra-source-files:     CHANGELOG.md
                        README.md
cabal-version:          >= 1.22

source-repository head
        type:           git
        location:       git://github.com/orome/crypto-enigma.git
        branch:         develop

source-repository this
        type:           git
        location:       git://github.com/orome/crypto-enigma.git
        branch:         hackage
        tag:            dist002

library
    -- default-extensions: Trustworthy
    exposed-modules:    Crypto.Enigma,
                        Crypto.Enigma.Display
    other-modules:      Crypto.Enigma.Utils
    -- other-extensions:
    build-depends:      base >= 4.8.1.0 && <4.9,
                        containers >= 0.5.5.1,
                        split >= 0.2.2,
                        MissingH >= 1.3.0.1
    -- hs-source-dirs:
    default-language:   Haskell2010
