name:                   crypto-enigma
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:         +-+------- breaking API changes
--                      | | +----- non-breaking API additions
--                      | | | +--- code changes with no API change
version:                0.0.2.8
synopsis:               An Enigma machine simulator with display.
description:            The crypto-enigma package is an Enigma machine simulator
                        with rich display and machine state details.
                        .
                        Currently support is only provided for the machine models in most widespread general use
                        during the war years: the I, M3, and M4.
                        .
                        For basic functionality, including some introspection of machine state
                        and the mappings performed, simply
                        .
                        > > import Crypto.Enigma
                        .
                        For richer display functionality additionally
                        .
                        > > import Crypto.Enigma.Display
                        .
                        (Note that this package assumes support for combining Unicode, without which some output may
                        appear garbled.)
homepage:               https://github.com/orome/crypto-enigma-hs
bug-reports:            https://github.com/orome/crypto-enigma-hs/issues
license:                BSD3
license-file:           LICENSE
author:                 Roy Levien
maintainer:             royl@aldaron.com
copyright:              (c) 2014-2016 Roy Levien
category:               Cryptography, Education
build-type:             Simple
extra-source-files:     CHANGELOG.md
                        README.md
extra-doc-files:        figs/*.jpg
cabal-version:          >=1.22

source-repository head
        type:           git
        location:       git://github.com/orome/crypto-enigma-hs.git
        branch:         develop

--source-repository this
--        type:           git
--        location:       git://github.com/orome/crypto-enigma-hs.git
--        branch:         hackage
--        tag:            0.0.2.8

library
    -- default-extensions: Trustworthy
    exposed-modules:    Crypto.Enigma,
                        Crypto.Enigma.Display
    other-modules:      Crypto.Enigma.Utils
    -- other-extensions:
    build-depends:      base >=4.8.1.0 && <=4.9.1.0,
                        containers >=0.5.5.1,
                        split >=0.2.2,
                        mtl >=2.2,
                        MissingH >=1.3.0.1
    -- hs-source-dirs:
    default-language:   Haskell2010

test-suite crypto-enigma-check
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test
    main-is:            Check.hs
    build-depends:      base >=4.8.1.0 && <=4.9.1.0,
                        QuickCheck >=2.8,
                        crypto-enigma
    -- ghc-options:        -threaded -rtsopts -with-rtsopts=-N
    default-language:   Haskell2010

test-suite crypto-enigma-test
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test
    main-is:            Test.hs
    build-depends:      base >=4.8.1.0 && <=4.9.1.0,
                        HUnit >=1.3,
                        crypto-enigma
    -- ghc-options:        -threaded -rtsopts -with-rtsopts=-N
    default-language:   Haskell2010
