name:                   crypto-enigma
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:         +-+------- breaking API changes
--                      | | +----- non-breaking API additions
--                      | | | +--- code changes with no API change
version:                0.1.1.6
synopsis:               An Enigma machine simulator with display. 
description:            The crypto-enigma package is an Enigma machine simulator
                        with rich display and machine state details.
                        .
                        Currently support is only provided for the machine models in most widespread general use
                        during the war years: the I, M3, and M4.
                        .
                        For basic functionality, including some introspection of machine state
                        and the mappings performed, simply
                        .
                        > > import Crypto.Enigma
                        .
                        For richer display functionality additionally
                        .
                        > > import Crypto.Enigma.Display
                        .
                        (Note that this package assumes support for combining Unicode, without which some output may
                        appear garbled.)
homepage:               https://github.com/orome/crypto-enigma-hs
bug-reports:            https://github.com/orome/crypto-enigma-hs/issues
license:                BSD3
license-file:           LICENSE
author:                 Roy Levien
maintainer:             royl@aldaron.com
copyright:              (c) 2014-2019 Roy Levien
category:               Cryptography, Education
build-type:             Simple
extra-source-files:     CHANGELOG.md
                        README.md
extra-doc-files:        figs/*.jpg
cabal-version:          1.22

source-repository head
        type:           git
        location:       git://github.com/orome/crypto-enigma-hs.git
        branch:         develop

source-repository this
        type:           git
        location:       git://github.com/orome/crypto-enigma-hs.git
        branch:         hackage
        tag:            0.1.1.6

library
    -- default-extensions: Safe
    exposed-modules:    Crypto.Enigma,
                        Crypto.Enigma.Display
    other-modules:      Crypto.Enigma.Utils
    -- other-extensions:
    build-depends:      base >=4.8.1.0 && <=4.13.0.0,
                        containers >=0.5.5.1,
                        split >=0.2.2,
                        text >=1.2.2.0
    -- hs-source-dirs:
    default-language:   Haskell2010

executable enigma
    main-is:            enigma.hs
    hs-source-dirs:     ., cli
    other-modules:      Crypto.Enigma,
                        Crypto.Enigma.Display,
                        Crypto.Enigma.Utils,
                        Paths_crypto_enigma
    build-depends:      base >=4.8.1.0 && <=4.13.0.0,
                        containers >=0.5.5.1,
                        split >=0.2.2,
                        text >=1.2.2.0,
                        optparse-applicative >=0.11.0.2,
                        ansi-terminal >=0.6.2.3,
                        crypto-enigma
    default-language:   Haskell2010

test-suite crypto-enigma-check
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test
    main-is:            Check.hs
    build-depends:      base >=4.8.1.0 && <=4.13.0.0,
                        QuickCheck >=2.8,
                        crypto-enigma
    -- ghc-options:        -threaded -rtsopts -with-rtsopts=-N
    default-language:   Haskell2010

test-suite crypto-enigma-test
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test
    main-is:            Test.hs
    build-depends:      base >=4.8.1.0 && <=4.13.0.0,
                        HUnit >=1.2.5.2,
                        crypto-enigma
    -- ghc-options:        -threaded -rtsopts -with-rtsopts=-N
    default-language:   Haskell2010
